Fixed settings, and added a /recent page to see recent data

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -3,6 +3,7 @@
 </head>
 <body>
 <h1>Current temperature: {{temperature}} C</h1>
-<h1>Current setpoint: {{setpoint}} C</h1>
+<h1>Current humidity: {{humidity}} %</h1>
+<h1>Current setpoint: {{setpoint}} %</h1>
 </body>
 </html>
